fixed centering on mobile

--- a/style.css
+++ b/style.css
@@ -15,8 +15,6 @@
 /* Font, margins, background and text color */
 html {
   font-family: var(--mainfont);
-  margin-left: 25px;
-  margin-right: 25px;
   background-color: var(--background);
   color: var(--text);
 }
@@ -36,8 +34,6 @@ img {
 }
 /* Adds wider margins, centers and shrinks text */
 footer {
-  margin-left: 25px;
-  margin-right: 25px;
   margin-bottom: 10px;
   margin-top: 30px;
   text-align: center;
